Bug 302006 - Crash after importing an VPN-Config-File
Summary: Crash after importing an VPN-Config-File
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.9
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Lamarque V. Souza
URL:
Keywords:
: 305311 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-16 10:46 UTC by André
Modified: 2012-08-17 13:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description André 2012-06-16 10:46:46 UTC
Application: kcmshell4 ()
KDE Platform Version: 4.7.2 (4.7.2) "release 5"
Qt Version: 4.7.4
Operating System: Linux 3.1.10-1.9-desktop x86_64
Distribution: "openSUSE 12.1 (x86_64)"

-- Information about the crash:
I tryed to import an VPN-Config-File (.cpf, Cisco VPN) into Networkmanager

The crash can be reproduced every time.

-- Backtrace:
Application: KDE-Kontrollmodul (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f9fdcd2b760 (LWP 2551))]

Thread 2 (Thread 0x7f9fc2b70700 (LWP 2552)):
#0  0x00007f9fdb604130 in __pthread_mutex_unlock_usercnt () from /lib64/libpthread.so.0
#1  0x00007f9fd7183b14 in g_main_context_prepare () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f9fd718492d in ?? () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f9fd7184f59 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#4  0x00007f9fdb9a2586 in QEventDispatcherGlib::processEvents (this=0x7f9fbc0008c0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00007f9fdb976a32 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f9fdb976c2f in QEventLoop::exec (this=0x7f9fc2b6fdf0, flags=...) at kernel/qeventloop.cpp:201
#7  0x00007f9fdb88e5df in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#8  0x00007f9fdb959aff in QInotifyFileSystemWatcherEngine::run (this=0x881f30) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007f9fdb891025 in QThreadPrivate::start (arg=0x881f30) at thread/qthread_unix.cpp:331
#10 0x00007f9fdb600f05 in start_thread () from /lib64/libpthread.so.0
#11 0x00007f9fda39a10d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f9fdcd2b760 (LWP 2551)):
[KCrash Handler]
#6  KProcess::setProgram (this=0x0, exe=..., args=...) at /usr/src/debug/kdelibs-4.7.2/build/kdecore/kprocess.moc:81
#7  0x00007f9fc3461ec3 in VpncUiPlugin::importConnectionSettings (this=0x9be290, fileName=...) at /usr/src/debug/networkmanagement-0.9.0/vpnplugins/vpnc/vpnc.cpp:193
#8  0x00007f9fc520312d in ManageConnectionWidget::importClicked (this=0x896a80) at /usr/src/debug/networkmanagement-0.9.0/settings/config/manageconnectionwidget.cpp:435
#9  0x00007f9fc51fbd3c in ManageConnectionWidget::qt_metacall (this=0x896a80, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fff9d0d1af0) at /usr/src/debug/networkmanagement-0.9.0/build/settings/config/moc_manageconnectionwidget.cpp:104
#10 0x00007f9fdb98a5aa in QMetaObject::activate (sender=0x9010e0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff9d0d1af0) at kernel/qobject.cpp:3287
#11 0x00007f9fdb194dd2 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#12 0x00007f9fdaedc5ae in QAbstractButtonPrivate::emitClicked (this=<optimized out>) at widgets/qabstractbutton.cpp:546
#13 0x00007f9fdaedd8eb in QAbstractButtonPrivate::click (this=0x87e5f0) at widgets/qabstractbutton.cpp:539
#14 0x00007f9fdaeddb5c in QAbstractButton::mouseReleaseEvent (this=0x9010e0, e=0x7fff9d0d23c0) at widgets/qabstractbutton.cpp:1121
#15 0x00007f9fdab7a306 in QWidget::event (this=0x9010e0, event=0x7fff9d0d23c0) at kernel/qwidget.cpp:8295
#16 0x00007f9fdab29c34 in notify_helper (e=0x7fff9d0d23c0, receiver=0x9010e0, this=0x6b6f90) at kernel/qapplication.cpp:4481
#17 QApplicationPrivate::notify_helper (this=0x6b6f90, receiver=0x9010e0, e=0x7fff9d0d23c0) at kernel/qapplication.cpp:4453
#18 0x00007f9fdab2f3bb in QApplication::notify (this=<optimized out>, receiver=0x9010e0, e=0x7fff9d0d23c0) at kernel/qapplication.cpp:4042
#19 0x00007f9fdc709e36 in KApplication::notify (this=0x7fff9d0d3100, receiver=0x9010e0, event=0x7fff9d0d23c0) at /usr/src/debug/kdelibs-4.7.2/kdeui/kernel/kapplication.cpp:311
#20 0x00007f9fdb97782c in QCoreApplication::notifyInternal (this=0x7fff9d0d3100, receiver=0x9010e0, event=0x7fff9d0d23c0) at kernel/qcoreapplication.cpp:787
#21 0x00007f9fdab2ac02 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../src/corelib/kernel/qcoreapplication.h:215
#22 QApplicationPrivate::sendMouseEvent (receiver=0x9010e0, event=0x7fff9d0d23c0, alienWidget=0x9010e0, nativeWidget=0x7f8ff0, buttonDown=0x9010e0, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3141
#23 0x00007f9fdaba6bc5 in QETWidget::translateMouseEvent (this=0x7f8ff0, event=<optimized out>) at kernel/qapplication_x11.cpp:4475
#24 0x00007f9fdaba5a9a in QApplication::x11ProcessEvent (this=0x7fff9d0d3100, event=0x7fff9d0d2c80) at kernel/qapplication_x11.cpp:3601
#25 0x00007f9fdabcd312 in x11EventSourceDispatch (s=0x6bad40, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#26 0x00007f9fd718458d in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#27 0x00007f9fd7184d88 in ?? () from /usr/lib64/libglib-2.0.so.0
#28 0x00007f9fd7184f59 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#29 0x00007f9fdb9a251f in QEventDispatcherGlib::processEvents (this=0x616ce0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#30 0x00007f9fdabccf9e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#31 0x00007f9fdb976a32 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#32 0x00007f9fdb976c2f in QEventLoop::exec (this=0x7fff9d0d3050, flags=...) at kernel/qeventloop.cpp:201
#33 0x00007f9fdafdbf86 in QDialog::exec (this=0x7f8ff0) at dialogs/qdialog.cpp:552
#34 0x00007f9fca5102fc in kdemain (_argc=<optimized out>, _argv=<optimized out>) at /usr/src/debug/kde-runtime-4.7.2/kcmshell/main.cpp:292
#35 0x0000000000408897 in _start ()

Reported using DrKonqi
Comment 1 Lamarque V. Souza 2012-06-16 15:25:16 UTC
Git commit 6b4a9949ab5448c092c4b8eef79860950abce638 by Lamarque V. Souza.
Committed on 16/06/2012 at 17:24.
Pushed by lvsouza into branch 'arthur'.

Allocate pointer before use.

M  +2    -0    vpnplugins/vpnc/vpnc.cpp

http://commits.kde.org/networkmanagement/6b4a9949ab5448c092c4b8eef79860950abce638
Comment 2 Lamarque V. Souza 2012-06-16 15:27:38 UTC
Git commit d6e4bab67fe1b962a5d89f92ca31fe537057f0a5 by Lamarque V. Souza.
Committed on 16/06/2012 at 17:24.
Pushed by lvsouza into branch 'nm09'.

Allocate pointer before use.
(cherry picked from commit 6b4a9949ab5448c092c4b8eef79860950abce638)

M  +2    -0    vpnplugins/vpnc/vpnc.cpp

http://commits.kde.org/networkmanagement/d6e4bab67fe1b962a5d89f92ca31fe537057f0a5
Comment 3 Lamarque V. Souza 2012-06-16 15:46:07 UTC
Git commit 20abc0f116865f439b78a272734d779517d2b890 by Lamarque V. Souza.
Committed on 16/06/2012 at 17:24.
Pushed by lvsouza into branch 'master'.

Allocate pointer before use.

M  +2    -0    vpnplugins/vpnc/vpnc.cpp

http://commits.kde.org/networkmanagement/20abc0f116865f439b78a272734d779517d2b890
Comment 4 Lamarque V. Souza 2012-07-16 16:48:58 UTC
Git commit 27c046c70699666d2a0b6297085e74b5689bf6ba by Lamarque V. Souza.
Committed on 16/07/2012 at 18:45.
Pushed by lvsouza into branch 'master'.

Revert "Allocate pointer before use."

This reverts commit 20abc0f116865f439b78a272734d779517d2b890.

This does not seem to be the correct fix.

M  +1    -1    plasma_nm_version.h
M  +0    -1    vpnplugins/vpnc/vpnc.cpp

http://commits.kde.org/networkmanagement/27c046c70699666d2a0b6297085e74b5689bf6ba
Comment 5 Lamarque V. Souza 2012-07-16 16:49:40 UTC
Git commit 9b9f06d9330ad4e594bba2610b4d7ec69abc94b5 by Lamarque V. Souza.
Committed on 16/07/2012 at 18:49.
Pushed by lvsouza into branch 'nm09'.

Revert "Allocate pointer before use."

This reverts commit d6e4bab67fe1b962a5d89f92ca31fe537057f0a5.

M  +0    -1    vpnplugins/vpnc/vpnc.cpp

http://commits.kde.org/networkmanagement/9b9f06d9330ad4e594bba2610b4d7ec69abc94b5
Comment 6 Lamarque V. Souza 2012-07-16 16:50:44 UTC
Git commit 0fc51fe52a02eed3993670887f7ab4a6ce4e2fbe by Lamarque V. Souza.
Committed on 16/07/2012 at 18:50.
Pushed by lvsouza into branch 'arthur'.

Revert "Allocate pointer before use."

This reverts commit 6b4a9949ab5448c092c4b8eef79860950abce638.

M  +0    -2    vpnplugins/vpnc/vpnc.cpp

http://commits.kde.org/networkmanagement/0fc51fe52a02eed3993670887f7ab4a6ce4e2fbe
Comment 7 Lamarque V. Souza 2012-07-16 17:08:05 UTC
Git commit 24053571f7bcbc65c41db8dcbb980f9d701a1fc1 by Lamarque V. Souza.
Committed on 16/07/2012 at 19:06.
Pushed by lvsouza into branch 'master'.

Fix crash properly this time.
FIXED-IN: 0.9.0.4

M  +1    -5    vpnplugins/vpnc/vpnc.cpp

http://commits.kde.org/networkmanagement/24053571f7bcbc65c41db8dcbb980f9d701a1fc1
Comment 8 Lamarque V. Souza 2012-07-16 17:09:34 UTC
Git commit dc3ca3ee771219cbcd1d080dc33e300cb95bf303 by Lamarque V. Souza.
Committed on 16/07/2012 at 19:06.
Pushed by lvsouza into branch 'nm09'.

Fix crash properly this time.
FIXED-IN: 0.9.0.4
(cherry picked from commit 24053571f7bcbc65c41db8dcbb980f9d701a1fc1)

M  +1    -5    vpnplugins/vpnc/vpnc.cpp

http://commits.kde.org/networkmanagement/dc3ca3ee771219cbcd1d080dc33e300cb95bf303
Comment 9 Lamarque V. Souza 2012-08-17 13:07:17 UTC
*** Bug 305311 has been marked as a duplicate of this bug. ***