Allocate pointer before use.

BUG: 302006
(cherry picked from commit 6b4a9949ab5448c092c4b8eef79860950abce638)